test/DaedalusCompiler.Tests/SemanticErrors/TypeResolverTests.cs
namespace DaedalusCompiler.Tests.SemanticErrors
{
    public class TypeResolverTests : BaseSemanticErrorsTests
    {
        
    }
}